Refactor `TaintAnalysisState` and `TaintAnalysisUtils` to use `ImmutableSet` and `ImmutableList` for improved immutability and consistency. remove unused exception handling